--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Alternativ kannst Du das Kanji-Zeichen wählen - oder einen eigenen Marker. -->
 Du kannst die Farbe ändern.
  Mit 'rotation' wir der Würfel auf allen drei Achsen gedreht - in unserem Beispiel steht er auf der Spitze.
 -->  
-  <a-box color="blue" rotation="45 45 45"></a-box>
+  <a-box color="red" rotation="45 45 45"></a-box>
 
        
  <!-- Zum Abschluss werden alle begonnenen Codes wieder geschlossen. Dazu werden sie mit / wiederholt. Außerdem wird die Kamera als Marker-Erkenner gesetzt. Keine Änderung nötig. -->  
