--- a/cube/index.html
+++ b/cube/index.html
@@ -23,8 +23,8 @@ Alternativ kannst Du das Kanji-Zeichen wählen - oder einen eigenen Marker. -->
 Du kannst die Farbe ändern.
  Mit 'rotation' wir der Würfel auf allen drei Achsen gedreht - in unserem Beispiel steht er auf der Spitze.
 -->  
-  <a-box color="red" rotation="45 45 60"></a-box>
-
+  
+  <a-box color="yellow" gps-entity-place="latitude: 52.762773; longitude: 13.647230"/>
        
  <!-- Zum Abschluss werden alle begonnenen Codes wieder geschlossen. Dazu werden sie mit / wiederholt. Außerdem wird die Kamera als Marker-Erkenner gesetzt. Keine Änderung nötig. -->  
 </a-marker>
