--- a/cube/index.html
+++ b/cube/index.html
@@ -24,7 +24,7 @@ Du kannst die Farbe ändern.
  Mit 'rotation' wir der Würfel auf allen drei Achsen gedreht - in unserem Beispiel steht er auf der Spitze.
 -->  
   
-  <a-box color="yellow" gps-entity-place="latitude: 52.762773; longitude: 13.647230"/>
+  <a-box color="yellow" gps-entity-place="latitude: <52.762764>; longitude: <13.647010>"/>
        
  <!-- Zum Abschluss werden alle begonnenen Codes wieder geschlossen. Dazu werden sie mit / wiederholt. Außerdem wird die Kamera als Marker-Erkenner gesetzt. Keine Änderung nötig. -->  
 </a-marker>
