--- a/cube/index.html
+++ b/cube/index.html
@@ -23,8 +23,8 @@ Alternativ kannst Du das Kanji-Zeichen wählen - oder einen eigenen Marker. -->
 Du kannst die Farbe ändern.
  Mit 'rotation' wir der Würfel auf allen drei Achsen gedreht - in unserem Beispiel steht er auf der Spitze.
 -->  
-  
-  <a-box color="yellow" gps-entity-place="latitude: <52.762764>; longitude: <13.647010>"/>
+  <a-camera gps-camera rotation-reader></a-camera>
+  <a-box color="yellow" gps-entity-place="latitude: <52.762764>; longitude: <13.647010>"/></a-box>
        
  <!-- Zum Abschluss werden alle begonnenen Codes wieder geschlossen. Dazu werden sie mit / wiederholt. Außerdem wird die Kamera als Marker-Erkenner gesetzt. Keine Änderung nötig. -->  
 </a-marker>
