--- a/cube/index.html
+++ b/cube/index.html
@@ -1,34 +1,16 @@
+
 <!DOCTYPE html>
 <html>
-
-  <!-- Mit den beiden Scripts wird die benötigte Open Soure Software verlinkt. Keine Änderung nötig.-->  
-<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
-   <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-
-  
-  <!-- Hier beginnt die eigentliche Website. Du kannst statt 'Beispiel für eine webbasierte Augmented Reality' auch einen anderen Titel wählen.  -->  
-<body style="margin : 0px; overflow: hidden; font-family: Monospace;"><div style="position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;">
-	Beispiel für webbasierte Augmented Reality
-</div>
-
-  <!-- Mit dem folgenden Code wird die Szene gestartet und die Kamera aktiviert. Keine Änderung nötig. -->
-  	 <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-
- <!-- Mit dem folgenden Code wird als 'Auslöser' das Hiro-Zeichen festgelegt. Dieses muss gescannt werden, um den AR-Inhalt zu öffnen. 
-Alternativ kannst Du das Kanji-Zeichen wählen - oder einen eigenen Marker. -->
-  <a-marker type="pattern" url="https://raw.githubusercontent.com/ebildungslabor/AR.js/master/data/data/ar.patt">   
-    
-  <!-- Mit dem folgenden Code wird der AR-Inhalt eingefügt. 
-Du kannst die Farbe ändern.
- Mit 'rotation' wir der Würfel auf allen drei Achsen gedreht - in unserem Beispiel steht er auf der Spitze.
--->  
-  <a-camera gps-camera rotation-reader></a-camera>
-  <a-box color="yellow" gps-entity-place="latitude: <52.762764>; longitude: <13.647010>"/></a-box>
-       
- <!-- Zum Abschluss werden alle begonnenen Codes wieder geschlossen. Dazu werden sie mit / wiederholt. Außerdem wird die Kamera als Marker-Erkenner gesetzt. Keine Änderung nötig. -->  
-</a-marker>
-<a-entity camera></a-entity>
+<head>
+<title>AR.js A-Frame Location-based</title>
+<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+</head>
+<body>
+<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+    <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: <52.762764>; longitude: <13.647010>" scale="10 10 10"></a-entity>
 </a-scene>
 </body>
 </html>
