--- a/cube/index.html
+++ b/cube/index.html
@@ -10,7 +10,7 @@
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 20'></a-camera>
-    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: <52.762764>; longitude: <13.647010>" scale="10 10 10"></a-entity>
+    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 52.762963; longitude: 13.647386" scale="10 10 10"></a-entity>
 </a-scene>
 </body>
 </html>
