--- a/manipulation/index.html
+++ b/manipulation/index.html
@@ -14,6 +14,9 @@
     <!-- Landing Pages - see https://www.8thwall.com/docs/web/#landing-pages -->
     <script src='https://raw.githubusercontent.com/Christoph-Blank/AR/main/manipulation/web/landing-page.js'></script>
 
+    <!-- 8thWall Web - Replace the app key here with your own app key -->
+    <script async src="//apps.8thwall.com/xrweb?appKey=XXXXX"></script>
+
 
   </head>
 
