--- a/manipulation/index.html
+++ b/manipulation/index.html
@@ -15,7 +15,7 @@
     <script src='https://raw.githubusercontent.com/Christoph-Blank/AR/main/manipulation/web/landing-page.js'></script>
 
     <!-- 8thWall Web - Replace the app key here with your own app key -->
-    <script async src="//apps.8thwall.com/xrweb?appKey=XXXXX"></script>
+    <script async src="//apps.8thwall.com/xrweb?appKey=1hnfrMfLBpJEbeqsH2FtM0FIrBA7A3KZQ25WO8qNeaYUF3GB5nDXffmTBs5MCgGyfT1bGu&s=1"></script>
 
 
   </head>
