--- a/objekt/index.html
+++ b/objekt/index.html
@@ -20,6 +20,40 @@
 <!-- Hier legst Du den Marker fest. Nähere Informationen dazu im Blogbeitrag -->
       <a-marker-camera type="pattern" url="https://raw.githubusercontent.com/ebildungslabor/AR.js/master/data/data/ar.patt"></a-marker-camera>
      		
-  </a-scene>
+  <a-scene
+  arjs
+  embedded
+  renderer="logarithmicDepthBuffer: true;"
+  vr-mode-ui="enabled: false"
+  gesture-detector
+  id="scene"
+>
+  <a-assets>
+    <a-asset-item
+      id="bowser"
+      src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/objekt/discobolus-the-discus-thrower-3d-model/scene.gltf"
+    >
+    </a-asset-item>
+  </a-assets>
+
+  <a-marker
+    preset="hiro"
+    raycaster="objects: .clickable"
+    emitevents="true"
+    cursor="fuse: false; rayOrigin: mouse;"
+    id="markerA"
+  >
+    <a-entity
+      id="bowser-model"
+      gltf-model="#bowser"
+      position="0 0 0"
+      scale="0.05 0.05 0.05"
+      class="clickable"
+      gesture-handler
+    >
+    </a-entity>
+  </a-marker>
+  <a-entity camera></a-entity>
+</a-scene>
 </body>
 </html>
