--- a/objekt/index.html
+++ b/objekt/index.html
@@ -14,7 +14,7 @@
   <!-- Mit dem folgenden Code wird AR.JS aktiviert. Keine Änderung nötig. -->
   	<a-scene embedded arjs="debugUIEnabled: false; sourceType: webcam;">
 
-<a-entity gltf-model="url(https://raw.githubusercontent.com/Christoph-Blank/AR/main/objekt/discobolus-the-discus-thrower-3d-model/scene.gltf)" rotation="0 45 0">
+<a-entity gltf-model="url(https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb)" rotation="0 45 0">
 </a-entity>
 
 <!-- Hier legst Du den Marker fest. Nähere Informationen dazu im Blogbeitrag -->
@@ -31,7 +31,7 @@
   <a-assets>
     <a-asset-item
       id="bowser"
-      src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/objekt/discobolus-the-discus-thrower-3d-model/scene.gltf"
+      src="https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb"
     >
     </a-asset-item>
   </a-assets>
