--- a/manipulation/index.html
+++ b/manipulation/index.html
@@ -1,82 +1,16 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>8th Wall Web: Manipulate</title>
-
-    <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
-    <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/manipulation/web/8frame-1.3.0.min.js"></script>
-
-    <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
-         See github.com/8thwall/web/tree/master/xrextras -->
-    <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/manipulation/web/xrextras.js"></script>
-
-    <!-- Landing Pages - see https://www.8thwall.com/docs/web/#landing-pages -->
-    <script src='https://raw.githubusercontent.com/Christoph-Blank/AR/main/manipulation/web/landing-page.js'></script>
-
-    <!-- 8thWall Web - Replace the app key here with your own app key -->
-    <script async src="//apps.8thwall.com/xrweb?appKey=1hnfrMfLBpJEbeqsH2FtM0FIrBA7A3KZQ25WO8qNeaYUF3GB5nDXffmTBs5MCgGyfT1bGu&s=1"></script>
-
-
-  </head>
-
-  <body>
-    <a-scene
-      xrextras-gesture-detector
-      landing-page
-      xrextras-loading
-      xrextras-runtime-error
-      renderer="colorManagement: true"
-      xrweb="allowedDevices: any">
-
-      <!-- We can define assets here to be loaded when A-Frame initializes -->
-      <a-assets>
-        <!-- Credit to Poly by Google for the model: https://poly.google.com/view/5ZMAz7_ucTn -->
-        <a-asset-item id="sandCastleModel" src="sand-castle.glb"></a-asset-item>
-      </a-assets>
-
-      <!-- The raycaster will emit mouse events on scene objects specified with the cantap class -->
-      <a-camera
-        id="camera"
-        position="0 8 8"
-        raycaster="objects: .cantap"
-        cursor="fuse: false; rayOrigin: mouse;">
-      </a-camera>
-
-      <a-entity
-        light="
-          type: directional;
-          intensity: 0.8;
-          castShadow: true;
-          shadowMapHeight:2048;
-          shadowMapWidth:2048;
-          shadowCameraTop: 10;
-          target: #model;"
-        xrextras-attach="target: model; offset: 1 15 3;"
-        shadow>
-      </a-entity>
-
-      <a-light type="ambient" intensity="0.7"></a-light>
-
-      <a-entity
-        id="model"
-        gltf-model="#sandCastleModel"
-        class="cantap"
-        xrextras-hold-drag
-        xrextras-two-finger-rotate
-        xrextras-pinch-scale
-        scale="3 3 3"
-        shadow="receive: false">
-      </a-entity>
-
-      <a-plane
-        id="ground"
-        rotation="-90 0 0"
-        width="1000"
-        height="1000"
-        material="shader: shadow"
-        shadow>
-      </a-plane>
-    </a-scene>
-  </body>
+<head>
+<title>AR.js A-Frame Location-based</title>
+<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+</head>
+<body>
+<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+    <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 52.762963; longitude: 13.647386" scale="5 5 5"></a-entity>
+</a-scene>
+</body>
 </html>
