--- a/manipulation/index.html
+++ b/manipulation/index.html
@@ -1,8 +1,6 @@
 
 
 
-
-
 <!DOCTYPE html>
 
 <html>
@@ -14,8 +12,8 @@
 
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script src="gesture-detector.js"></script>
-    <script src="gesture-handler.js"></script>
+    <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/bib/gesture-detector.js"></script>
+    <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/bib/gesture-handler.js"></script>
   </head>
 
   <body>
@@ -30,7 +28,7 @@
       <a-assets>
         <a-asset-item
           id="bowser"
-          src="https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb"
+          src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/bib/bowser.glb"
         >
         </a-asset-item>
       </a-assets>
