--- a/manipulation/index.html
+++ b/manipulation/index.html
@@ -43,7 +43,7 @@
         <a-entity
           id="bowser-model"
           gltf-model="#bowser"
-          gps-new-entity-place="latitude: 52.762963; longitude: 13.647386"
+          position="0 0 0"
           scale="0.05 0.05 0.05"
           class="clickable"
           gesture-handler
