--- a/manipulation/index.html
+++ b/manipulation/index.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 
 <html>
@@ -15,6 +12,7 @@
     <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/bib/gesture-detector.js"></script>
     <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/bib/gesture-handler.js"></script>
   </head>
+
 
   <body>
     <a-scene
@@ -50,7 +48,9 @@
         >
         </a-entity>
       </a-marker>
-      <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+      <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
+
+
