--- a/manipulation/index.html
+++ b/manipulation/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="styles.css">
 
-    <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/bib/aframe.min.js"></script>
-    <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/bib/aframe-ar.js"></script>
-    <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/bib/gesture-detector.js"></script>
-    <script src="https://raw.githubusercontent.com/Christoph-Blank/AR/main/bib/gesture-handler.js"></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="gesture-detector.js"></script>
+    <script src="gesture-handler.js"></script>
   </head>
 
 
