--- a/manipulation/index.html
+++ b/manipulation/index.html
@@ -31,17 +31,23 @@
         </a-asset-item>
       </a-assets>
 
-    
+      <a-marker
+        preset="hiro"
+        raycaster="objects: .clickable"
+        emitevents="true"
+        cursor="fuse: false; rayOrigin: mouse;"
+        id="markerA"
+      >
         <a-entity
           id="bowser-model"
           gltf-model="#bowser"
-          gps-new-entity-place="latitude: 52.762963; longitude: 13.647386"
+          position="0 0 0"
           scale="0.05 0.05 0.05"
           class="clickable"
           gesture-handler
         >
         </a-entity>
-      
+      </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
