--- a/manipulation/index1.html
+++ b/manipulation/index1.html
@@ -24,7 +24,7 @@
     >
       <a-nft
         type="nft"
-        url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex-image-big.jpeg"
+        url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex.iset"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
