--- a/cube/index.html
+++ b/cube/index.html
@@ -10,7 +10,7 @@
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <a-entity material='color: red' geometry='primitive: cone' gps-new-entity-place="latitude: 52.762963; longitude: 13.647386" scale="5 5 5"></a-entity>
+    <a-entity material='color: red' geometry='primitive: sphere'  gps-new-entity-place="latitude: 52.762963; longitude: 13.647386" radius: "2"></a-entity>
 </a-scene>
 </body>
 </html>
