--- a/cube/index.html
+++ b/cube/index.html
@@ -11,7 +11,7 @@
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <a-entity material='side: double; shader: texture-shader' geometry='primitive: ring; radiusInner: 3.5; radiusOuter: 4; thetaStart: 0; thetaLength: 360' gps-new-entity-place="latitude: 52.762963; longitude: 13.647386"></a-entity>
+    <a-entity material='side: double; shader: ocean; color: blue; wave-height: 10' geometry='primitive: ring; radiusInner: 3.5; radiusOuter: 5.5; thetaStart: 0; thetaLength: 360' gps-new-entity-place="latitude: 52.762963; longitude: 13.647386"></a-entity>
 </a-scene>
 </body>
 </html>
