--- a/cube/index.html
+++ b/cube/index.html
@@ -6,12 +6,12 @@
 <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
-<script src="texture-shader.js"></script>
+<script src="grid-glitch.js"></script>
 </head>
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <a-entity material='side: double; shader: ocean; color: blue; wave-height: 10' geometry='primitive: ring; radiusInner: 3.5; radiusOuter: 5.5; thetaStart: 0; thetaLength: 360' gps-new-entity-place="latitude: 52.762963; longitude: 13.647386"></a-entity>
+    <a-entity material='side: double; shader: grid-glitch; color: blue' geometry='primitive: ring; radiusInner: 3.5; radiusOuter: 5.5; thetaStart: 0; thetaLength: 360' gps-new-entity-place="latitude: 52.762963; longitude: 13.647386"></a-entity>
 </a-scene>
 </body>
 </html>
